# redgifs

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  newtags.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: newtags.yml  pypi.yml  pyright.yml  test.yml
docs/: api.md  api.rst  changelogs.md  changelogs.rst  conf.py  index.md  index.rst  migrating.rst  usage.md  usage.rst
docs/source/: conf.py
examples/: async.py  context_async.py  context_sync.py  download.py  download_images.py  download_user.py  proxy.py  sync.py  tag.py  tags.py
redgifs/: __init__.py  __main__.py  aio.py  api.py  const.py  enums.py  errors.py  http.py  models.py  parser.py  tags.json  tags.py  utils.py
redgifs/types/: feeds.py  gif.py  image.py  niches.py  response.py  responses.py  tags.py  user.py
tests/: api_search.py  conftest.py  invalid_search.py  tags_search.py  test_gif_creator_attrs.py  test_images.py  test_images_attrs.py  test_invalid_search.py  test_order.py  test_result_attrs.py  test_routes.py  test_search.py  test_tags.py  test_tags_search.py
