[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = [
    "redgifs",
    "redgifs/types"
]
exclude = [
    "**/__pycache__",
    "build",
    "dist",
    "docs",
]
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedImport = "error"
pythonVersion = "3.8"
typeCheckingMode = "basic"
